fix: contact page pleaceholder error and spacing between tags

--- a/src/app/_components/articles/_articles.scss
+++ b/src/app/_components/articles/_articles.scss
@@ -43,6 +43,8 @@
 }
 
 .article--tags {
+  --cluster-gap: 0.5rem;
+
   position: absolute;
   left: 0.5rem;
   bottom: 0.5rem;
